clusters/quantika/infra/pi-hole/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: test.indeweygerlings.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-ip-dummy
                port:
                  number: 80
